# fmac

./: Cargo.toml  LICENSE  README.md
src/: main.rs  test.rs
