[package]
name = "fmac"
version = "1.1.0"
edition = "2021"
authors = ["Casey C <kcx1codes@gmail.com>"]
description = "A fast and simple CLI tool for formatting mac addresses"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
clap = { version = "4.4.11", features = ["derive"] }
cli-clipboard = "0.4.0"
